# mchammer-pt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_canonical.py  02_custom_callback.py  03_parallel_workers.py  04_equilibrium_sampling.py  05_custom_ensemble.py
mchammer_pt/: __init__.py  base.py  callbacks.py  canonical.py  diagnostics.py  exchange.py  history.py  replica.py  testing.py
mchammer_pt/parallel/: _imports.py  _worker.py  backend.py  processes.py  serial.py
tests/: _ensemble_fixtures.py  _observer_fixtures.py  conftest.py  test_backends.py  test_base.py  test_boltzmann_sampling.py  test_callbacks.py  test_canonical.py  test_detailed_balance.py  test_diagnostics.py  test_exchange.py  test_history.py  test_imports.py  test_integration.py  test_pools.py  test_replica.py
